<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.samsunginventoryapplication.EditorActivity"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <!-- Make layout style look cleaner -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/phone_series"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/phone_series"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <EditText
                android:id="@+id/name_phone_series"
                android:hint="@string/name_phone_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/series_phone_series"
                android:hint="@string/series_phone_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--Temporary solution...user shall either be able to
            access the gallery or take image from camera-->
        <ImageView
            android:id="@+id/image_input"
            android:src="@mipmap/ic_launcher"
            android:layout_height="48dp"
            android:layout_weight="1.5"
            android:layout_width="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <TextView
            android:id="@+id/phone_colour"
            android:text="@string/phone_colour"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

            <!-- Colour drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_colour"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone_memory"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/phone_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/phone_storage_size"
            android:hint="Storage size?"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.4"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/phone_available_quantity"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/phone_available_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/phone_minus_quantity"
                android:text="-"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <EditText
                android:id="@+id/quantity_editText"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/phone_plus_quantity"
                android:text="+"
                android:layout_width="48dp"
                android:layout_height="48dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.4"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/phone_restock"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/phone_restock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- This shoul -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phone_quantity_restock"
                android:hint="Number input"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/phone_text_stocked"
                android:textSize="16sp"
                android:text="@string/phone_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <TextView
            android:id="@+id/phone_price"
            android:text="@string/phone_price"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/phone_dollars_price"
            android:id="@+id/phone_price_editText"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>

